fix support for embedded images for basic Dialogs ( fdo#45992 )

Signed-off-by: Petr Mladek <pmladek@suse.cz>